--- a/create.html
+++ b/create.html
@@ -16,7 +16,7 @@
         <div class="dropdown">
             <button class="dropbtn">Quiz</button>
             <div class="dropdown-content">
-                <a href="#">About Malmö</a>
+                <a href="aboutMalmo.html">About Malmö</a>
                 <a href="#">Video games</a>
                 <a href="#">Programming</a>
             </div>
