--- a/videoGames.html
+++ b/videoGames.html
@@ -8,7 +8,7 @@
     <title>SuperQuiz</title>
 </head>
 <body>
-    <!-- This is About Malmo-page -->
+    <!-- This is Video Games-page -->
     <script src="/javaScript/main.js"></script>
     <div class="topNav"> <!-- Creates a navigationBar in the top -->
         <a href="/index.html">Home</a>
