Adding all new files, some modified.

--- a/programming.html
+++ b/programming.html
@@ -12,15 +12,15 @@
     <script src="/javaScript/main.js"></script>
     <div class="topNav"> <!-- Creates a navigationBar in the top -->
         <a href="/index.html">Home</a>
-        <a class="active" href="/aboutMalmo.html"></a>
+        
         <div class="dropdown">
             <button class="dropbtn">Quiz</button>
             <div class="dropdown-content">
-                <a href="#">About Malmö</a>
-                <a href="#">Video games</a>
-                <a href="#">Programming</a>
+                <a href="aboutMalmo.html">About Malmö</a>
+                <a href="videoGames.html">Video games</a>
+                <a href="programming.html">Programming</a>
             </div>
         </div>
-        <a href="/create.html">Create</a>
+        <a href="/create.html">Create your own SuperQuiz</a>
     </div>
-    <h6>About Malmö</h6>
+    <h6>About Programming</h6>
