Added button start quiz for AboutMalmö

--- a/aboutMalmo.html
+++ b/aboutMalmo.html
@@ -23,4 +23,6 @@
         </div>
         <a href="/create.html">Create your own SuperQuiz</a>
     </div>
-    <h6>About Malmö</h6>
+    <h4>About Malmö</h4>
+    <h6>This Quiz contains three questions about Malmö, a beautiful city in the south region of Sweden. <br> Good luck!</h6>
+    <button id="startAboutMalmoQuiz" type="button" onclick="showAboutMalmoQuiz()">Start "About Malmö" Quiz</button>
