added questons about Malmö

--- a/aboutMalmo.html
+++ b/aboutMalmo.html
@@ -24,5 +24,11 @@
         <a href="/create.html">Create your own SuperQuiz</a>
     </div>
     <h4>About Malmö</h4>
-    <h6>This Quiz contains three questions about Malmö, a beautiful city in the south region of Sweden. <br> Good luck!</h6>
+    <h6>This Quiz contains three questions about Malmö, <br> a beautiful city in the south region of Sweden. <br> Good luck!</h6>
     <button id="startAboutMalmoQuiz" type="button" onclick="showAboutMalmoQuiz()">Start "About Malmö" Quiz</button>
+    <ul id="malmoQandA">
+        <li>What is "Folkets park" in Malmö?</li>
+        <li>What is "Turning Torso"?</li>
+        <li>How many people live in the city of Malmo?</li>
+    </ul>
+    
