added new js files, new classes for all quizes, small css changes

--- a/aboutMalmo.html
+++ b/aboutMalmo.html
@@ -14,7 +14,7 @@
         <a href="/index.html">Home</a>
         <!-- <a class="active" href="/aboutMalmo.html"></a> Dont need, removed on the other html files -->
         <div class="dropdown">
-            <button class="dropbtn">Quiz</button>
+            <button class="dropbtn">Quiz ...</button>
             <div class="dropdown-content">
                 <a href="aboutMalmo.html">About Malmö</a>
                 <a href="videoGames.html">Video games</a>
@@ -27,8 +27,8 @@
     <h6>This Quiz contains three questions about Malmö, <br> a beautiful city in the south region of Sweden. <br> Good luck!</h6>
     <button id="startAboutMalmoQuiz" type="button" onclick="showAboutMalmoQuiz()">Start "About Malmö" Quiz</button>
     <ul id="malmoQandA">
-        <li>What is "Folkets park" in Malmö?</li>
-        <li>What is "Turning Torso"?</li>
-        <li>How many people live in the city of Malmo?</li>
+        <li>Q1: What is "Folkets park" in Malmö?</li>
+        <li>Q2: What is "Turning Torso"?</li>
+        <li>Q3: How many people live in the city of Malmo?</li>
     </ul>
-    
+ 
