added a images-folder, moved all images to folder

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     
     <h2 id="firstText">Welcome to</h2> <!-- Added id due to css changes -->
-    <img id="superQuiz-logo" src="superQuiz-logo.jpg">
+    <img id="superQuiz-logo" src="/images/superQuiz-logo.jpg">
     <h6 id="secondText">Please select a quiz in the navigation bar at the top.</h6>
     
 </body>
