modified new javaScript-files into folder, now working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <!-- This is the Home Page -->
     <script src="/javaScript/main.js"></script>
-    <div class="topNav"> <!-- Creates a navigationBar in the top -->
+    <script src="/javaScript/aboutMalmoQuiz.js"></script>
+    <script src="/javaScript/videoGamesQuiz.js"></script>
+    <script src="javaScript/programmingQuiz.js"></script>
+    <script src="javaScript/createQuiz.js"></script>
+    <div class="topNav"> <!-- Creates a navigationBar at the top -->
         <a class="active" href="/index.html">Home</a>
         
         <div class="dropdown">
