--- a/videoGames.html
+++ b/videoGames.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <title>SuperQuiz</title>
 </head>
-<body>
+<body> -->
     <!-- This is Video Games-page -->
-    <script src="/javaScript/main.js"></script>
-    <div class="topNav"> <!-- Creates a navigationBar in the top -->
-        <a href="/index.html">Home</a>
+    <!-- <script src="/javaScript/main.js"></script> -->
+     <!-- <div class="topNav"> Creates a navigationBar in the top -->
+        <!-- <a href="/index.html">Home</a> -->
         
-        <div class="dropdown">
-            <button class="dropbtn">Quiz ...</button>
-            <div class="dropdown-content">
-                <a href="aboutMalmo.html">About Malmö</a>
-                <a href="videoGames.html">Video games</a>
-                <a href="programming.html">Programming</a>
-            </div>
-        </div>
-        <a href="/create.html">Create your own SuperQuiz</a>
-    </div>
-    <h6>About Video Games</h6>
+        <!-- <div class="dropdown"> -->
+            <!-- <button class="dropbtn">Quiz ...</button> -->
+            <!-- <div class="dropdown-content"> -->
+                <!-- <a href="aboutMalmo.html">About Malmö</a> -->
+                <!-- <a href="videoGames.html">Video games</a> -->
+                <!-- <a href="programming.html">Programming</a> -->
+            <!-- </div> -->
+        <!-- </div> -->
+        <!-- <a href="/create.html">Create your own SuperQuiz</a> -->
+    <!-- </div> -->
+    <!-- <h6>About Video Games</h6> -->
