--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="/javaScript/videoGamesQuiz.js"></script>
     <script src="/javaScript/programmingQuiz.js"></script>
     <script src="/javaScript/createQuiz.js"></script>
+    <script src="/javaScript/user.js"></script>
 
     <script src="/javaScript/app.js"></script>
     
