new Setup. Create objects instead of having one class per item

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 
     <script src="/javaScript/topNav.js"></script>
     <script src="/javaScript/home.js"></script>
-    <script src="/javaScript/aboutMalmoQuiz.js"></script>
-    <script src="/javaScript/videoGamesQuiz.js"></script>
-    <script src="/javaScript/programmingQuiz.js"></script>
-    <script src="/javaScript/createQuiz.js"></script>
+    <script src="/javaScript/quiz.js"></script>
+    <script src="/javaScript/question.js"></script>
     <script src="/javaScript/user.js"></script>
+    <!-- <script src="/javaScript/score.js"></script> -->
 
     <script src="/javaScript/app.js"></script>
     
