functions for quiz in order.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="/javaScript/quiz.js"></script>
     <script src="/javaScript/question.js"></script>
     <script src="/javaScript/user.js"></script>
-    <!-- <script src="/javaScript/score.js"></script> -->
+    <script src="/javaScript/score.js"></script>
 
     <script src="/javaScript/app.js"></script>
     
