--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="/javaScript/question.js"></script>
     <script src="/javaScript/user.js"></script>
     <script src="/javaScript/score.js"></script>
+    <script src="/javaScript/missingPage.js"></script>
 
     <script src="/javaScript/app.js"></script>
     
