new content, hurry!

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 
     <script src="/javaScript/Domer.js"></script>
 
-    <script src="/javaScript/topNav.js"></script>
-    <script src="/javaScript/home.js"></script>
-    <script src="/javaScript/quiz.js"></script>
-    <script src="/javaScript/question.js"></script>
-    <script src="/javaScript/user.js"></script>
-    <script src="/javaScript/score.js"></script>
-    <script src="/javaScript/missingPage.js"></script>
+    <script src="/javaScript/TopNav.js"></script>
+    <script src="/javaScript/Home.js"></script>
+    <script src="/javaScript/Quiz.js"></script>
+    <script src="/javaScript/Question.js"></script>
+    <script src="/javaScript/User.js"></script>
+    <script src="/javaScript/Score.js"></script>
+    <script src="/javaScript/MissingPage.js"></script>
+    <script src="/javaScript/AboutMalmoQuiz.js"></script>
+    <script src="/javaScript/ProgrammingQuiz.js"></script>
+    <script src="/javaScript/VideoGamesQuiz.js"></script>
+    <script src="/javaScript/CreateQuiz.js"></script>
 
-    <script src="/javaScript/app.js"></script>
+    <script src="/javaScript/App.js"></script>
     
 </body>
 </html>
