Getting close to the finishLine

--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 
     <script src="/javaScript/TopNav.js"></script>
     <script src="/javaScript/Home.js"></script>
-    <script src="/javaScript/Quiz.js"></script>
-    <script src="/javaScript/Question.js"></script>
-    <script src="/javaScript/User.js"></script>
-    <script src="/javaScript/Score.js"></script>
     <script src="/javaScript/AboutMalmoQuiz.js"></script>
     <script src="/javaScript/ProgrammingQuiz.js"></script>
     <script src="/javaScript/VideoGamesQuiz.js"></script>
     <script src="/javaScript/CreateQuiz.js"></script>
-
+    <script src="/javaScript/QuizList.js"></script>
+    <script src="/javaScript/Question.js"></script>
+    
     <script src="/javaScript/App.js"></script>
     
 </body>
